--- a/.github/workflows/core-testing-linting.yml
+++ b/.github/workflows/core-testing-linting.yml
@@ -25,11 +25,20 @@ jobs:
       uses: actions/setup-python@v3
       with:
         python-version: ${{ matrix.python-version }}
-    - name: Install dependencies
+    - name: Upgrade Pip and Install flake8 dependency
       run: |
         python -m pip install --upgrade pip
-        python -m pip install flake8 pytest
-        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+        python -m pip install flake8
+      # The following line only works on unix systems:
+      # if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+    - name: Check for requirements.txt
+      id: check_file
+      uses: andstor/file-existence-action@v1
+      with:
+        files: "requirements.txt"
+    - name: Install dependencies if requirements.txt exists
+      if: steps.check_file.outputs.filesExist == 'true'
+      run: pip install -r requirements.txt
     - name: Lint with flake8
       run: |
         # stop the build if there are Python syntax errors or undefined names
