--- a/.github/workflows/core-testing-linting.yml
+++ b/.github/workflows/core-testing-linting.yml
@@ -16,7 +16,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [ubuntu-latest, macos-latest, windows-latest]
+        os: [debian-latest, ubuntu-latest, macos-latest, windows-latest]
         python-version: ["3.12", "3.13"]
 
     steps:
