Update OS matrix in core testing workflow
Removed 'debian-latest' from the OS matrix for testing.

--- a/.github/workflows/core-testing-linting.yml
+++ b/.github/workflows/core-testing-linting.yml
@@ -16,7 +16,8 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [debian-latest, ubuntu-latest, macos-latest, windows-latest]
+        os: [ubuntu-latest, macos-latest, windows-latest]
+        # Support debian-latest later by self-hosting a runner
         python-version: ["3.12", "3.13"]
 
     steps:
