--- a/.github/workflows/core-testing-linting.yml
+++ b/.github/workflows/core-testing-linting.yml
@@ -23,9 +23,14 @@ jobs:
     steps:
     - uses: actions/checkout@v4
     - name: Set up Python ${{ matrix.python-version }}
+      if: matrix.os != 'Debian-12'
       uses: actions/setup-python@v3
       with:
         python-version: ${{ matrix.python-version }}
+    - name: Set up Python ${{ matrix.python-version }} on Debian-12
+      if: matrix.os == 'Debian-12'
+      run: |
+        sudo apt install -y python${{ matrix.python-version }}
     - name: Upgrade Pip and Install flake8 dependency
       run: |
         python -m pip install --upgrade pip
