--- a/.github/workflows/core-testing-linting.yml
+++ b/.github/workflows/core-testing-linting.yml
@@ -30,7 +30,7 @@ jobs:
     - name: Set up Python ${{ matrix.python-version }} on Debian-12
       if: matrix.os == 'Debian-12'
       run: |
-        sudo apt install -y python${{ matrix.python-version }}
+        echo ${{secrets.SFDEVOPS002PSSWD}} | sudo -S apt install -y python${{ matrix.python-version }}
     - name: Upgrade Pip and Install flake8 dependency
       run: |
         python -m pip install --upgrade pip
