--- a/.github/workflows/core-testing-linting.yml
+++ b/.github/workflows/core-testing-linting.yml
@@ -29,8 +29,9 @@ jobs:
         python-version: ${{ matrix.python-version }}
     - name: Set up Python ${{ matrix.python-version }} on Debian-12
       if: matrix.os == 'Debian-12'
+      # Consider python-*-full later if needed
       run: |
-        echo ${{secrets.SFDEVOPS002PSSWD}} | sudo -S apt install -y python${{ matrix.python-version }}
+        echo ${{secrets.SFDEVOPS002PSSWD}} | sudo -S apt install -y python${{ matrix.python-version }}-minimal
     - name: Upgrade Pip and Install flake8 dependency
       run: |
         python -m pip install --upgrade pip
