--- a/.github/workflows/core-testing-linting.yml
+++ b/.github/workflows/core-testing-linting.yml
@@ -35,11 +35,7 @@ jobs:
       # setup-python action does not support debian directly
       run: |
         sudo apt install -y python${{ matrix.python-version }}
-    - name: Alias Python ${{ matrix.python-version }} on Debian-13
-      if: contains(matrix.os, 'debian')
-       # For some reason python isn't added to path by default on debian; alias it here
-      run: |
-        alias python='python${{ matrix.python-version }}'
+        sudo apt install -y python-is-python3
     - name: Upgrade Pip and Install flake8 dependency
       run: |
         python -m pip install --upgrade pip
