--- a/.github/workflows/core-testing-linting.yml
+++ b/.github/workflows/core-testing-linting.yml
@@ -36,6 +36,7 @@ jobs:
       run: |
         sudo apt install -y python${{ matrix.python-version }}
         sudo apt install -y python-is-python3
+        sudo apt install -y python3-pip
     - name: Upgrade Pip and Install flake8 dependency
       run: |
         python -m pip install --upgrade pip
