--- a/.github/workflows/core-testing-linting.yml
+++ b/.github/workflows/core-testing-linting.yml
@@ -37,6 +37,8 @@ jobs:
         sudo apt install -y python${{ matrix.python-version }}
         sudo apt install -y python-is-python3
         sudo apt install -y python3-pip
+        python3 -m venv ./venv
+        source ./venv/bin/activate
     - name: Upgrade Pip and Install flake8 dependency
       run: |
         python -m pip install --upgrade pip
