--- a/.github/workflows/core-testing-linting.yml
+++ b/.github/workflows/core-testing-linting.yml
@@ -37,7 +37,7 @@ jobs:
         sudo apt install -y python${{ matrix.python-version }}
         sudo apt install -y python-is-python3
         sudo apt install -y python3-pip
-        sudo apt install python${{ matrix.python-version }}-venv
+        sudo apt install -y python${{ matrix.python-version }}-venv
         python3 -m venv ./venv
         source ./venv/bin/activate
     - name: Upgrade Pip and Install flake8 dependency
