--- a/.github/workflows/core-testing-linting.yml
+++ b/.github/workflows/core-testing-linting.yml
@@ -17,33 +17,16 @@ jobs:
       fail-fast: false
       matrix:
         os: [ubuntu-latest, macos-latest, windows-latest]
-        # Support debian-latest later by self-hosting a runner
-        python-version: ["3.12", "3.13"]
-        include:
-          - os: debian-13
-            python-version: "3.13"  # Only version supported by Debian-13
+        python-version: ["3.12", "3.13", "3.14"]
 
     steps:
     - uses: actions/checkout@v4
     - name: Set up Python ${{ matrix.python-version }}
-      if: matrix.os != 'debian-13'
       uses: actions/setup-python@v3
       with:
         python-version: ${{ matrix.python-version }}
-    - name: Set up Python ${{ matrix.python-version }} on Debian-13
-      if: contains(matrix.os, 'debian')
-      # setup-python action does not support debian directly
-      run: |
-        sudo apt install -y python${{ matrix.python-version }}
-        sudo apt install -y python-is-python3
-        sudo apt install -y python3-pip
-        sudo apt install -y python${{ matrix.python-version }}-venv
-    - name: Create virtual environment
-      run: |
-        python3 -m venv ./venv
     - name: Upgrade Pip and Install flake8 dependency
       run: |
-        source ./venv/bin/activate
         python -m pip install --upgrade pip
         python -m pip install flake8
       # The following line only works on unix systems:
@@ -56,8 +39,50 @@ jobs:
     - name: Install dependencies if requirements.txt exists
       if: steps.check_file.outputs.filesExist == 'true'
       run: | 
-        source ./venv/bin/activate
         python -m pip install -r requirements.txt
+    - name: Lint with flake8
+      run: |
+        # stop the build if there are Python syntax errors or undefined names
+        python -m flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
+        # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
+        python -m flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
+    - name: Install src files as package 
+      run: |
+        python -m pip install -e . --config-settings editable_mode=strict
+    - name: Test with unittest
+      run: |
+        python -m unittest discover -s ./tests -p '*_tests.py'
+
+  debian-build:
+    runs-on: ${{ matrix.os }}
+    strategy:
+      fail-fast: false
+      matrix:
+        include:
+          - os: debian-13
+            python-version: "3.13"  # Only version supported by Debian-13
+
+    steps:
+    - name: Set up Python ${{ matrix.python-version }} on ${{ matrix.os }}
+      # setup-python action does not support debian directly
+      run: |
+        sudo apt install -y python${{ matrix.python-version }}
+        sudo apt install -y python-is-python3
+        sudo apt install -y python3-pip
+        sudo apt install -y python${{ matrix.python-version }}-venv
+    - name: Create virtual environment
+      # Debian requires pip installs to be done in a venv for some reason - I'll consider it a safety measure
+      run: |
+        python3 -m venv ./venv
+    - name: Upgrade Pip and Install flake8 dependency
+      run: |
+        source ./venv/bin/activate
+        python -m pip install --upgrade pip
+        python -m pip install flake8
+    - name: Install dependencies if requirements.txt exists
+      run: | 
+        source ./venv/bin/activate
+        if [ -f requirements.txt ]; then python -m pip install -r requirements.txt; fi
     - name: Lint with flake8
       run: |
         source ./venv/bin/activate
